--- a/config.yml
+++ b/config.yml
@@ -138,14 +138,9 @@ steps:
   link: '{{ repoUrl }}/pull/2'
   actions:
   - type: gate
-    every: true
-    gates:
-    - left: '%payload.check_run.external_id%'
-      operator: ===
-      right: ./action-a
-    - left: '%payload.check_run.status%'
-      operator: ===
-      right: completed
+    left: '%payload.check_run.status%'
+    operator: ===
+    right: completed
   - type: gate
     left: '%payload.check_run.conclusion%'
     operator: ===
