rename the course

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-title: Hello, GitHub Actions!
+title: 'GitHub Actions: Hello World'
 description: Create a GitHub Action and use it in a workflow.
 tags:
   - GitHub Actions
